# rag_search_system

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run.py  worker.py
.github/workflows/: python-ci.yml
alembic/: env.py
alembic/versions/: 20260707_0001_baseline_schema.py  20260714_0002_add_chunk_neighbor_index.py
app/: __init__.py  cache.py  db_migration.py  logging_config.py  main.py  migrations.py  queue.py  rate_limiter.py
app/api/: __init__.py  auth.py  conversation.py  deps.py  document.py  health.py  knowledge_base.py  memory.py  rag.py  user.py
app/auth/: __init__.py  jwt_utils.py
app/core/: celery.py  config.py  database.py  redis.py
app/models/: __init__.py  document.py  knowledge_base.py  knowledge_base_member.py  rag_conversation.py  user.py  user_memory.py
app/rag/: __init__.py  answering.py  chain.py  chunk_models.py  chunker.py  distributed_limit.py  embeddings.py  rag_models.py  (+4 more)
docs/: OPERATIONS.md  RAGAS_EVALUATION.md
eval/: ragas_dataset.example.jsonl  ragas_experiment.ipynb
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
scripts/: download-models.sh  gc.py  ragas_evaluate.py
testpy/: test_ragas_script.py
tests/: conftest.py  test_async_pipeline.py  test_conversation_context.py  test_health.py  test_rag.py  test_rag_answer.py  test_shared_api.py  test_short_term_memory.py
(+28 files in other folders)
